--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,17 +9,27 @@
 
     <!-- Registration -->
     <string name="stop_smoking_start">금연 시작</string>
+    <string name="nick_name">닉네임</string>
     <string name="resolution">각오</string>
     <string name="amount_of_smoking">하루 흡연량(개비)</string>
     <string name="tobacco_price">담배 가격</string>
+    <string name="user_widget">각오는 위젯에 사용됩니다.</string>
 
+    <string name="toast_nick_name">닉네임을 입력해주세요..</string>
     <string name="toast_amount_of_smoking">하루 흡연량을 입력해주세요.</string>
     <string name="toast_tobacco_price">담배 가격을 입력해주세요.</string>
     <string name="toast_my_resolution">금연하기 위한 각오를 입력해주세요.</string>
     <string name="toast_zero_input_exception">0보다 크게 입력해주세요.</string>
-
+    <string name="toast_input_space">공백은 입력할 수 없습니다.</string>
 
     <!-- Main -->
-    <string name="stop_smoking_text">금연한지 %d일 째..</string>
-    
+    <string name="main_top_label">금연한지</string>
+    <string name="stop_smoking_d_day">+%d</string>
+    <string name="date_select_text">금연을 시작한 날짜를 선택해주세요.</string>
+    <string name="chat">담소</string>
+    <string name="stop_smoking_after_body_changes">금연 후\n신체 변화</string>
+
+
+    <string name="edit">수정</string>
+
 </resources>
