--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,14 +22,20 @@
     <string name="toast_zero_input_exception">0보다 크게 입력해주세요.</string>
     <string name="toast_input_space">공백은 입력할 수 없습니다.</string>
 
+
     <!-- Main -->
     <string name="main_top_label">금연한지</string>
-    <string name="stop_smoking_d_day">+%d</string>
+    <string name="stop_smoking_d_day">%d일</string>
     <string name="date_select_text">금연을 시작한 날짜를 선택해주세요.</string>
-    <string name="chat">담소</string>
+    <string name="chat">담소 (준비중)</string>
     <string name="stop_smoking_after_body_changes">금연 후\n신체 변화</string>
+    <string name="stop_smoking_share_friends">금연 시작 친구에게 공유</string>
+
+    <string name="snack_backward_finish">뒤로가기를 한번 더 실행하면 앱이 종료됩니다.</string>
 
 
+    <!-- Default -->
     <string name="edit">수정</string>
+
 
 </resources>
