--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,11 +17,15 @@
     <string name="tobacco_price">담배 가격(1갑)</string>
     <string name="user_widget">각오는 위젯에 사용됩니다.</string>
 
-    <string name="message_nick_name">닉네임을 입력해주세요..</string>
+    <string name="message_nick_name">닉네임을 입력해주세요.</string>
+    <string name="message_nick_name_length">닉네임은 최소 2자 최대 10자까지 입력할 수 있습니다.</string>
     <string name="message_amount_of_smoking">하루 흡연량을 입력해주세요.</string>
+    <string name="message_amount_of_smoking_length">하루 흡연량은 최대 3자리까지 입력할 수 있습니다.</string>
     <string name="message_tobacco_price">담배 가격을 입력해주세요.</string>
+    <string name="message_tobacco_price_length">담배 가격은 최대 6자리까지 입력할 수 있습니다.</string>
     <string name="message_my_resolution">금연하기 위한 각오를 입력해주세요.</string>
-    <string name="message_zero_input_exception">0보다 크게 입력해주세요.</string>
+    <string name="message_my_resolution_length">금연하기 위한 각오는 최대 20자리까지 입력할 수 있습니다.</string>
+    <string name="message_zero_input_exception">%s은 0보다 크게 입력해주세요.</string>
     <string name="message_input_space">공백은 입력할 수 없습니다.</string>
     <string name="message_length">최소 2자 이상 입력해주세요.</string>
     <string name="message_reduplication">중복된 닉네임이 있습니다. 다시 입력해주세요.</string>
