--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -94,6 +94,9 @@
     <string name="input_contents">내용을 입력해주세요.(최대 150자)</string>
     <string name="set_up_category">카테고리를 설정해주세요.</string>
 
+    <string name="message_upload_success">업로드 성공</string>
+    <string name="message_upload_fail">업로드 실패\n잠시 후 다시 시도해주세요.</string>
+    <string name="message_one_letter_or_more">%s은 최소 1자 이상 입력해주세요.</string>
 
     <!-- Default -->
     <string name="check">확인</string>
