- Added something to do. - Typing error solved.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -63,7 +63,7 @@
     <string name="two_day">48시간 경과</string>
     <string name="two_day_info">후각과 미각이 향상됩니다. 같은 음식을 먹더라도 색 다른 맛을 느낄 수 있습니다.</string>
     <string name="three_day">72시간 경과</string>
-    <string name="three_day_info">체내 니코킨 잔량이 대부분 배출되며 폐의 회복이 시작됩니다. 금단 증상이 극에 달합니다.</string>
+    <string name="three_day_info">체내 니코틴 잔량이 대부분 배출되며 폐의 회복이 시작됩니다. 금단 증상이 극에 달합니다.</string>
     <string name="one_week">1주 경과</string>
     <string name="one_week_info">가래의 점도와 색이 정상적으로 되돌아오며, 흡연에 대한 욕구는 여전히 남아있습니다.</string>
     <string name="two_week">2주 경과</string>
