- 익명 로그인 기능 추가 - 디자인 변경

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,7 +35,7 @@
 
 
     <!-- Main -->
-    <string name="main_top_start_label">에 시작해서</string>
+    <string name="main_top_start_label">에 시작했어요</string>
     <string name="main_top_label">금연한지</string>
     <string name="main_top_end_label">되었어요.</string>
     <string name="stop_smoking_d_day">%d일</string>
@@ -46,12 +46,12 @@
     <string name="main_title5">%s님! 다시 흡연자로 돌아가지 마세요.</string>
     <string name="main_save_tobacco">%d개비</string>
     <string name="the_amount_saved">아낀 금액</string>
-    <string name="my_resolution">나의 각오</string>
-    <string name="un_smoked_cigarettes">지금까지 안피운 담배</string>
-    <string name="increased_lifespan">금연 후 늘어난 수명</string>
+    <string name="my_resolution">각오</string>
+    <string name="un_smoked_cigarettes">안피운 담배</string>
+    <string name="increased_lifespan">지켜낸 시간</string>
     <string name="chat">담소 나누기</string>
-    <string name="stop_smoking_after_body_changes">금연 후\n신체 변화</string>
-    <string name="stop_smoking_share_friends">금연 시작\n친구에게 공유</string>
+    <string name="stop_smoking_after_body_changes">금연 후 신체 변화</string>
+    <string name="stop_smoking_share_friends">금연 시작 친구에게 공유하기</string>
 
     <string name="message_backward_finish">뒤로가기를 한번 더 실행하면 앱이 종료됩니다.</string>
     <string name="message_kakao_not_install">카카오톡이 설치되지 않거나 로그인하지 않은 경우\n해당 기능을 이용할 수 없습니다.</string>
@@ -101,12 +101,13 @@
     <string name="fetched_all_data">데이터를 모두 가져왔습니다.</string>
 
     <!-- CommunityDetail -->
-    <string name="from_writer">%s님이\n작성한 글입니다.</string>
+    <string name="from_writer">%s님이 작성한 글입니다.</string>
     <string name="from_writer_me">내가 작성한 글입니다.</string>
     <string name="input_comment">내용을 입력해주세요.</string>
     <string name="comment_failure">댓글이 등록되지 않았습니다. 잠시 후 다시 시도해주세요.</string>
     <string name="comment_delete_success">댓글이 삭제되었습니다.</string>
     <string name="comment_delete_failure">댓글이 삭제되지 않았습니다. 잠시 후 다시 시도해주세요.</string>
+    <string name="no_comment">댓글이 없습니다.</string>
 
     <!-- Write -->
     <string name="shared_no_smoking_story">금연 성공담, 실패담 등등 이야기를 다른 사람들과 공유해보세요.</string>
@@ -121,6 +122,7 @@
 
     <!-- Default -->
     <string name="check">확인</string>
+    <string name="register">등록</string>
     <string name="edit">수정</string>
     <string name="delete">삭제</string>
     <string name="error">예기치 못한 오류가 발생했습니다. 잠시 후 다시 시도해주세요.</string>
