- 공유하기 기능 깜빡이도록 수정 - string 분류되지 않은 text 정리

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,6 +35,8 @@
 
 
     <!-- Main -->
+    <string name="stop_smoking_label">금연 정보</string>
+    <string name="share_label">주변에 금연 소식 알리기</string>
     <string name="main_top_start_label">에 시작했어요</string>
     <string name="main_top_label">금연한지</string>
     <string name="main_top_end_label">되었어요.</string>
